done with assessment3

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <body>
         <h1>Cat with Trophy, 2018</h1>
         <div id="pictureframe">
-            <img src="cat.jpg" width="600">
-            <img id="trophy" src="trophy.jpg" width="150">
+            <img src="cat.jpg" 
+            width="600"
+            quality= "80">
+        
+            <img id="trophy" 
+            src="trophy.png" 
+            width="150" 
+            convert src="trophy.png" 
         </div>
 
         <h2>Instructions</h2>
